# minimal-sdl2-bgfx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
include/shaders/cube/: fs_cube.sc.essl.bin.h  fs_cube.sc.glsl.bin.h  fs_cube.sc.spv.bin.h  vs_cube.sc.essl.bin.h  vs_cube.sc.glsl.bin.h  vs_cube.sc.spv.bin.h
shader/: CMakeLists.txt
shader/shaders/cube/: fs_cube.sc  varying.def.sc  vs_cube.sc
